Resolve horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ li {
 /* LAYOUT */
 
 body {
-  width: 100vw;
+  max-width: 100vw;
+  width: 100%;
   min-height: 100vh;
   padding: 1rem;
   display: flex;
@@ -102,7 +103,7 @@ body {
 
   .container {
     max-width: 100vw;
-    width: 100vw;
+    width: 100%;
   }
 }
 
